--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@ cpuprofile
 images-server/imagestore/5/ksal.jpeg
 images-server/imagestore/2/download.jpeg
 images-server/imagestore/4/download.jpeg
+images-server/images-server
+images-server/ksal_png.zip
+images-server/imagestore/1/ksal.png
+cpuprofile
